[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name='point-in-time'
description='Lightweight tooling for tracking experiment state in git based repositories.'
version='0.0.0'
authors=[
    { name = 'Carter Fendley' }
]

# Restrictions causing minimum version
# Python 3.7:
# - subprocess.run's capture_output
requires-python = ">= 3.7"
dependencies = [
    "click",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
pit = "point_in_time.cli:pit"

[tool.pdm.build]
includes = ["point_in_time"]
source-includes = [
    "README.md",
    "pyproject.toml",
    "tests",
    "tox.ini"
]